<resources>
    <string name="app_name">EarthquakeMonitor</string>
    <string name="loading">Loading</string>
    <string name="error">Error</string>

    <string name="menu_action_settings">Settings</string>
    <string name="menu_action_settings_title">Settings</string>
    <string name="preference_category_search_title">Searching</string>
    <string name="preference_save_location_title">Remember current location</string>
    <string name="preference_save_location_key" translatable="false">preference_save_location_key</string>
    <string name="preference_radius_title">Search radius (km)</string>
    <string name="preference_radius_key" translatable="false">preference_radius_key</string>
    <string name="preference_radius_default" translatable="false">50</string>
    <string name="preference_category_sort_title">Sorting</string>
    <string name="preference_sort_ascending_title">Sort ascending</string>
    <string name="preference_sort_ascending_key" translatable="false">preference_sort_ascending_key</string>
    <string name="preference_sort_ascending_summary_on"><![CDATA[A->Z / 0->9]]></string>
    <string name="preference_sort_ascending_summary_off"><![CDATA[Z->A / 9->0]]></string>
    <string name="preference_sort_by_title">Sort by:</string>
    <string name="preference_sort_by_key" translatable="false">preference_sort_by_key</string>
    <string name="preference_sort_by_default" translatable="false">@string/preference_sort_by_time_value</string>
    <string name="preference_sort_by_time_label">Time</string>
    <string name="preference_sort_by_time_value" translatable="false">time</string>
    <string name="preference_sort_by_magnitude_label">Magnitude</string>
    <string name="preference_sort_by_magnitude_value" translatable="false">magnitude</string>
    <string name="preference_sort_by_location_label">Location</string>
    <string name="preference_sort_by_location_value" translatable="false">location</string>
    <string name="preference_category_filter_title">Filter</string>
    <string name="preference_min_magnitude_default" translatable="false">0.0</string>
    <string name="preference_min_magnitude_title">Minimum magnitude</string>
    <string name="preference_min_magnitude_key" translatable="false">preference_min_magnitude_key</string>
    <string name="preference_search_key" translatable="false">preference_search_key</string>
    <string name="preference_search_default" translatable="false">""</string>
    <string name="toast_bad_number_input">Please try another number</string>
    <string name="menu_action_search_title">Search</string>
    <string name="menu_action_clear_search">Clear Search</string>
</resources>
