<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <item
        android:id="@+id/menu_action_search"
        android:icon="@android:drawable/ic_menu_search"
        android:orderInCategory="1"
        android:title="@string/menu_action_search_title"
        app:actionViewClass="android.support.v7.widget.SearchView"
        app:showAsAction="ifRoom|collapseActionView" />
    <item
        android:id="@+id/menu_action_settings"
        android:icon="@drawable/ic_settings_white_24dp"
        android:orderInCategory="2"
        android:title="@string/menu_action_settings_title"
        app:showAsAction="ifRoom" />

    <item
        android:id="@+id/menu_action_clear_search"
        android:orderInCategory="3"
        android:title="@string/menu_action_clear_search"
        app:showAsAction="never" />
</menu>